[package]
name = "kvs"
version = "0.1.0"
authors = ["Nicolas Thery <nicolas.thery@gmail.com>"]
edition = "2018"
description = "A key-value store"

[dependencies]
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.0.7"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
walkdir = "2.2.7"
