[package]
name = "kvs"
version = "0.1.0"
authors = ["Nicolas Thery <nicolas.thery@gmail.com>"]
edition = "2018"
description = "A key-value store"

[dependencies]
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.0.7"
log = "0.4.7"
stderrlog = "0.4.1"
sled = "0.24"
num_cpus = "1.10.1"
rayon = "1.1.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false

[profile.bench]
debug = true
